# rust-genai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BIG-THANKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HANDOVER.md  LICENSE-APACHE  LICENSE-MIT  README.md  lessons-learned.md  providers-pricing.json  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: cerebras-manual-test.yml  cerebras-tests.yml  ci.yml  release.yml  yakbak-replay-tests.yml
dev/agents/: fetch-issue.aip  fetch-pr.aip
dev/spec/: _spec-rules.md  spec-client.md  spec-tool.md
dev/specs/: spec-adapter.md  spec-chat.md  spec-common.md  spec-opencode-go.md  spec-tool.md  spec-webc.md
doc/: FORK_MAINTENANCE.md  test-specification.md
doc/for-llm/: api-reference-for-llm.md
doc/migration/: migration-v_0_3_to_0_4.md
docs/: otel.md
docs/for-llm/: api-reference-for-llm.md
docs/migration/: migration-v_0_5_to_0_6.md  migration-v_0_6_to_0_7.md
examples/: c00-new.rs  c00-readme.rs  c01-conv.rs  c01-openai.rs  c01-simple.rs  c02-auth-provider.rs  c02-auth-resolver.rs  c02-auth.rs  c02-stream.rs  c03-conv.rs  c03-conversation.rs  c03-kind.rs  c03-mapper.rs  c04-chat-options.rs  c04-provider-options.rs  c04-req-options.rs  c05-list-models.rs  c05-model-names.rs  c06-image.rs  c06-model-spec.rs  c06-target-resolver.rs  c07-image.rs  c07-zai.rs  c08-contrived-async-auth.rs  c08-image-gen.rs  c08-tooluse.rs  c09-cache-ttl.rs  c09-google-gcp.rs  c10-aihubmix.rs  c10-tooluse-streaming.rs  c10-typed-tools.rs  c11-cerebras.rs  c11-extra-headers.rs  c11-openai-resp-reasoning-roundtrip.rs  c11-tooluse-deterministic.rs  c12-oauth.rs  c12-otel.rs  c13-oauth-full.rs  c14-oauth-flags-test.rs  c15-oauth-refresh.rs  (+16 more)
examples/support/: mod.rs
genai-macros/: Cargo.toml
genai-macros/src/: lib.rs
scripts/: fetch_actual_models.sh  fetch_provider_models.sh  sync-upstream.sh  test_genai_models.sh  test_model_resolution.sh  verify_provider_models.sh
src/: error.rs  lib.rs  support.rs
src/adapter/: adapter_config.rs  adapter_kind.rs  adapter_macros.rs  adapter_types.rs  dispatcher.rs  dispatcher_macros.rs  error.rs  inter_stream.rs  mod.rs  support.rs
src/adapter/adapters/: all_adapters.rs  mod.rs  support.rs
src/adapter/adapters/aihubmix/: adapter_impl.rs  mod.rs
src/adapter/adapters/aliyun/: adapter_impl.rs  mod.rs
src/adapter/adapters/anthropic/: adapter_impl.rs  adapter_shared.rs  mod.rs  oauth_config.rs  oauth_obfuscate.rs  oauth_transform.rs  oauth_utils.rs  streamer.rs
src/adapter/adapters/baidu/: adapter_impl.rs  mod.rs
src/adapter/adapters/bedrock/: adapter_api.rs  adapter_impl.rs  adapter_sigv4.rs  converse.rs  mod.rs  shared.rs  sigv4.rs  streamer.rs
src/adapter/adapters/bigmodel/: mod.rs  (+1 more)
src/adapter/macros/: adapter_impl_macro.rs  adapter_impl_macros.rs  adapter_kind_macros.rs  dispatcher_macros.rs  mod.rs
src/adapters/: mod.rs
src/adapters/ollama/: adapter.rs  impl_client.rs  impl_froms.rs  mod.rs
src/adapters/openai/: adapter.rs  impl_client.rs  impl_froms.rs
src/chat/: binary.rs  chat_message.rs  chat_options.rs  chat_req.rs  chat_req_response_format.rs  chat_req_tool_choice.rs  chat_request.rs  chat_res.rs  chat_response.rs  chat_response_format.rs  chat_respose.rs  chat_stream.rs  content_part.rs  json_schema.rs  message_content.rs  mod.rs  printer.rs  tool.rs  usage.rs  web_search_result.rs
src/chat/content_part/: common.rs  custom_part.rs  mod.rs
src/chat/tool/: mod.rs  tool_base.rs  tool_call.rs  tool_error.rs  tool_response.rs  tool_trait.rs  tool_types.rs  web_fetch.rs  web_search.rs  web_search_config.rs
src/client/: builder.rs  client_impl.rs  client_types.rs  config.rs  headers.rs  mod.rs  model_spec.rs  service_target.rs  web_config.rs
src/client/openai/: mod.rs  openai_impl.rs
src/common/: config_set.rs  mod.rs  model_iden.rs  model_info.rs  model_name.rs
src/embed/: embed_options.rs  embed_request.rs  embed_response.rs  mod.rs
src/otel/: agent.rs  attrs.rs  conventions.rs  error.rs  events.rs  mod.rs  span.rs  tests.rs
src/providers/: mod.rs  support.rs
src/providers/anthropic/: impl_client.rs  mod.rs  provider.rs  streamer.rs
src/providers/ext/: mod.rs
src/providers/ollama/: impl_client.rs  impl_froms.rs  provider.rs
src/providers/openai/: impl_client.rs  impl_froms.rs  provider.rs
src/resolver/: adapter_kind_resolver.rs  auth_data.rs  auth_resolver.rs  endpoint.rs  error.rs  mod.rs  model_mapper.rs  oauth_config.rs  oauth_credentials.rs  oauth_refresh.rs  provider_config.rs  service_target_resolver.rs
src/support/: mod.rs  value_ext.rs
src/types/: chat.rs  chat_req.rs  chat_res.rs  client.rs  client_config.rs  gen.rs  legacy_client.rs  legacy_client_config.rs  mod.rs  tool.rs
src/utils/: chat_printer.rs  mod.rs  x_value.rs
src/webc/: error.rs  event_source_stream.rs  mod.rs  web_client.rs  web_stream.rs
tests/: anthropic_test_plan.md  live_api_tests.rs  mock_tests.rs  openrouter_streaming_test.rs  test_adapter_consistency.rs  test_model_listing.rs  test_provider_anthropic.rs  test_provider_groq.rs  test_provider_openai.rs  test_resolution_fixes.rs  test_verify_model_lists.rs  test_zai_adapter.rs  tests_p_aihubmix.rs  tests_p_anthropic.rs  tests_p_anthropic_web_search.rs  tests_p_bedrock.rs  tests_p_cerebras.rs  tests_p_cohere.rs  tests_p_cohere_embeddings.rs  tests_p_custom.rs  tests_p_deepseek.rs  tests_p_deepseek_reasoner.rs  tests_p_deepseek_reasoning.rs  tests_p_fireworks.rs  tests_p_gemini.rs  tests_p_gemini_embeddings.rs  tests_p_gemini_image.rs  tests_p_gemini_reasoning.rs  tests_p_github_copilot.rs  tests_p_groq.rs  tests_p_groq_reasoning.rs  tests_p_kimi.rs  tests_p_minimax.rs  tests_p_ollama.rs  tests_p_ollama_cloud.rs  tests_p_ollama_reasoning.rs  tests_p_omlx.rs  tests_p_openai.rs  tests_p_openai_embeddings.rs  tests_p_openai_reasoning.rs  (+23 more)
tests/data/: openai_generated_schema_cases.json  openai_generated_tool_schema_cases.json
tests/support/: asserts.rs  common_tests.rs  data.rs  helpers.rs  mod.rs  openrouter_utils.rs  seeders.rs  test_error.rs
tests/support/yakbak/: mod.rs  server.rs
(+100 files in other folders)
