[package]
name = "genai"
version = "0.4.0-alpha.10"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Multi-AI Providers Library for Rust. (OpenAI, Gemini, Anthropic, xAI, Ollama, Groq, DeepSeek, Grok)"
keywords = ["generative-ai","openai","chatgpt","gemini","ollama"]
homepage = "https://github.com/jeremychone/rust-genai"
repository = "https://github.com/jeremychone/rust-genai"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
# missing_docs = "warn"

[dependencies]
# -- Tracing
tracing = { version = "0.1", features = ["default"] }
# -- Async
tokio = { version = "1", features = ["macros","rt-multi-thread", "io-std", "test-util"]}
futures = "0.3"
tokio-stream = "0.1"
# -- Json
serde = { version = "1", features = ["derive", "rc"] } # Opted to rc for Arc<T> serialization
serde_json = "1"
serde_with = "3.12.0"
# -- Web
reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
reqwest-eventsource = "0.6"
eventsource-stream = "0.2"
bytes = "1.6"
# -- Others
derive_more = { version = "2", features = ["from", "display"] }
value-ext = "0.1.2" 

[dev-dependencies]
simple-fs = "0.7.0"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
serial_test = "3.2.0"
base64 = "0.22.0"  # Check for the latest version
bitflags = "2.8.0"
gcp_auth = "0.12.3"
