[package]
name = "genai-macros"
version = "0.3.6-WIP"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Procedural macros for the genai crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde_json = "1" 
syn = { version = "2.0.101", features = ["full"] }
